<resources>
    <string name="app_name">a00NavigationComponent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="btnLogin">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="back">Back</string>
    <string name="full_name">Full Name</string>
    <string name="cityfragment">CityFragment</string>
    <string name="favorite">Favorite</string>
    <string name="city">City</string>
    <string name="city_details">City Details</string>
</resources>